<resources>
    <string name="app_name">Spotlight</string>
    <string name="title_activity_login">"Login"</string>
    <string name="txt_login_Username">"Username"</string>
    <string name="txt_login_Password">"Password"</string>
    <string name="txt_login_PasswordForgotten">"Forgot Password?"</string>
    <string name="txt_login_NeuesPasswortAnfordern">"request new password"</string>
    <string name="txt_login_Anmelden">"Log In"</string>
    <string name="txt_login_Abmelden">"Sign out"</string>
    <string name="txt_Support">"Support, report problems"</string>
    <string name="txt_AccountDelete">"Delete account"</string>
    <string name="txt_AccountDeleteReally">"Really delete?"</string>
    <string name="txt_login_Registrieren">Register</string>
    <string name="txt_login_haftungsausschluss">"Disclaimer"</string>
    <string name="txt_impressum">"Imprint"</string>
    <string name="txt_login_datenschutzerklarung">"Data protection"</string>
    <string name="txt__alertFailedEmailTitle">"Oh no"</string>
    <string name="txt__alertFailedEmailDetails">"Registration limit reached, try again in the next hour: D"</string>
    <string name="txt__alertCheckMailTitle">"One moment"</string>
    <string name="txt__alertCheckMailDetails">"Check if registration limit is reached."</string>
    <string name="txt_register_wieistdeinname">"What is your name?"</string>
    <string name="txt_register_vorname">"First given name"</string>
    <string name="txt_register_nachname">"Surname"</string>
    <string name="txt_register_lawandorder">"By proceeding, you agree to our Terms of Use, Privacy Policy and Disclaimer."</string>
    <string name="txt_register_weiter">"Continue"</string>
    <string name="txt_register_fastFertig">"Almost finished"</string>
    <string name="txt_register_username">"Your nickname"</string>
    <string name="txt_register_password">Password</string>
    <string name="txt_register_password_repeat">"Repeat password"</string>
    <string name="txt_register_email">"Your email"</string>
    <string name="txt_register_birthday">"birthday"</string>
    <string name="txt__errorBenutzernameVergeben">"Username is already taken"</string>
    <string name="txt__errorBenutzernameMinMax">"Username must be min. Have 2 characters and may max. Have 20 characters"</string>
    <string name="txt__errorEmailVergeben">"Email is already registered"</string>
    <string name="txt__errorEmailUngültig">"Invalid E-mail"</string>
    <string name="txt__errorPasswortMatchingError">"Password does not match"</string>
    <string name="txt__errorMinAlter">"You must be at least 12 years old"</string>
    <string name="txt__error_Vorname">"First name must be min. 1 character and allowed max. Have 20 characters"</string>
    <string name="txt__error_Nachname">"Last name must be min. 1 character and allowed max. Have 20 characters"</string>
    <string name="txt__alert_BenutzerErstellenFehlerTitel">"Registration"</string>
    <string name="txt__alert_BenutzerErstellenFehler">"Error registering, something is wrong with your first name and surname. \ N Please restart the app."</string>
    <string name="txt__alertMaxConnections">"Your maximum number of connections has been reached. \ N \ nWarning time: Less than a minute"</string>
    <string name="txt__alertLogIn">"Login"</string>
    <string name="txt_Account">"profile"</string>
    <string name="txt_AccountDeletingProgress">"Delete profile including data &#8230;"</string>
    <string name="txt_AccountDeletingFailed">"ohh, an error has occurred."</string>
    <string name="txt__alertRegister">"Registration"</string>
    <string name="txt__alertUserExists">"User already exists."</string>
    <string name="txt__alertNeverHappens">"Oh, sorry, that should not have happened."</string>
    <string name="txt__alertUnoMomento">"One moment…"</string>
    <string name="txt_alertWrongPassword">"Wrong password."</string>
    <string name="txt_alertEmailVerification">"We have sent you an email, please verify this to use the app. \ N \ nWe do not know if it's your email address."</string>
    <string name="txt_alertServerOffline">"Sorry, our servers are offline. We try to fix the problem as soon as possible."</string>
    <string name="txt_alertAnmeldungSuccesfull">"Login Successful."</string>
    <string name="txt_alertEmailVerficationTitle">"Email verification"</string>
    <string name="txt_alertPermissionMissingTitle">"permissions"</string>
    <string name="txt_alertPermissionMissing">"Please release the permissions to use the app."</string>
    <string name="txt_alertPermissionButtonTrue">"Allow"</string>
    <string name="txt_alertPermissionButtonFalse">"Deny"</string>
    <string name="txt_alertCountryDbDetailsCancel">"Abort, stop"</string>
    <string name="txt_alertPostingPhotoNotSavedToUpdatePost">"Error, could prepare image for upload. (Too little space)"</string>
    <string name="txt_alertLogInFriendSyncFailed">"Friends could not be synced. Try again later, or contact the support."</string>
    <string name="txt_alertLogInDatenbankAbgleich">"Database synchronization is running."</string>
    <string name="txt_alertCameraCantOpenTitle">"camera error"</string>
    <string name="txt_alertCameraCantTakePictureDetails">"Ooops. Camera does not want anymore, camera does not take a photo. "</string>
    <string name="txt_alertPinFailedToDownloadDetails">"Ooops. An error has occurred."</string>
    <string name="txt_alertMomentFailedToDeleteTitleDetails">"Oops. Your picture could not be deleted :("</string>
    <string name="txt_failedSynchronisationTitel">"synchronization"</string>
    <string name="txt_failedSynchronisationDetails">"Aii, your conversations could not be synchronized. Try it again."</string>
    <string name="txt_failedToHandleFriends">"Ooops."</string>
    <string name="txt_failedToHandleFriendsDetails">"Something went wrong."</string>
    <string name="txt_no_internet">"No Internet connection"</string>
    <string name="txt_gefunden">"Found"</string>
    <string name="txt_failed_newPwRequest">"Oops. Something went wrong. :( "</string>
    <string name="txt_newPwRequested">"We sent you an email with a link. With this you can change your password."</string>
    <string name="txt_newPwAlreadyRequested">"You have already received an email from us."</string>
    <string name="txt_newPwRequestTITLE">"Reset password"</string>
    <string name="txt_info_clear_chat">"If you delete this chat history, all messages lost will be lost from this conversation. \ N \ n (Pictures and videos will be kept)"</string>
    <string name="txt_searchStatus_Suche">"Search …"</string>
    <string name="txt_searchStatus_KeinErgebniss">"Nothing found"</string>
    <string name="txt_TippeUmOpen">"Press to open"</string>
    <string name="txt_einstellungen">"Settings"</string>
    <string name="txt_Moments">Moments</string>
    <string name="txt_hinzufuegen">"Add"</string>
    <string name="txt_group_member_leftGroup">"%s left the group."</string>
    <string name="txt_group_member_wasKicked">"%s has been removed."</string>
    <string name="txt_group_you_removed">"%s has removed you."</string>
    <string name="txt_search">"Search"</string>
    <string name="txt_blockUser">"To block"</string>
    <string name="txt_Abbrechen">"Abort, stop"</string>
    <string name="txt_dialog_show_moments">"Our moments"</string>
    <string name="txt_momente_with">"Moments with %s"</string>
    <string name="txt_tryAgain">"Try again"</string>
    <string name="txt_download_failed">"Download failed"</string>
    <string name="txt_new_friendAnfrageNotification">"%s wants to be your friend"</string>
    <string name="txt_new_friendShipIsTrueNotification">"You're friends with %s now."</string>
    <string name="txt_new_friendAnfrageNotificationTitel">"New friend request"</string>
    <string name="txt_new_friendAnfrageAccepted">"New friend"</string>
    <string name="txt_senden_an">"Send to"</string>
    <string name="txt_senden">"Send"</string>
    <string name="txt_gerade">"Just"</string>
    <string name="txt_sMinutes">"before %1$d min"</string>
    <string name="txt_sHoursWithMinutes">"before %1$d std %2$s min"</string>
    <string name="txt_sHoursSingle">"before %1$d std"</string>
    <string name="txt_sWeeks">before %1$d w</string>
    <string name="txt_sDays">before %1$d d</string>
    <string name="txt_friends_Searching_person">"Search for persons"</string>
    <string name="txt_friend_status_friendship">"Remove as a friend"</string>
    <string name="txt_friend_status_i_got_anfrage">"Accept"</string>
    <string name="txt_friend_status_anfrageVerschickt">"Requested"</string>
    <string name="txt_friend_status_i_blocked">"Sharing"</string>
    <string name="txt_inviteFriends">Invite friends</string>
    <string name="txt_no_savedPostsPrivateGallerie">"Your pictures are displayed here"</string>
    <string name="txt_beitraegeAnzahl">"%s posts"</string>
    <string name="txt_block_UserTitle">"To block"</string>
    <string name="txt_removeFriend_UserTitle">"Remove friend?"</string>
    <string name="txt_remove">"Remove"</string>
    <string name="txt_beschreibung">"Description…"</string>
    <string name="txt_title_top_person_posts">"friends"</string>
    <string name="txt_zuletzt">"Last"</string>
    <string name="txt_postPicture">"Send"</string>
    <string name="txt_noti_user_saved_your_postInPrivate">"%s saved your post."</string>
    <string name="txt_clear_Chat">"Delete chat history"</string>
    <string name="txt_chat_status_own_Opened">"Has your post open"</string>
    <string name="txt_chat_status_own_saved">"Saved your post"</string>
    <string name="txt_chat_status_own_Senden">"Send…"</string>
    <string name="txt_chat_status_own_Uploaded">"uploaded"</string>
    <string name="txt_chat_status_own_sent">"Posted"</string>
    <string name="txt_chat_status_own_message_failed_sending">"Hold down to see more."</string>
    <string name="txt_chat_status_own_chat_opened">"Message open"</string>
    <string name="txt_chat_status_new_message_text">"New Message"</string>
    <string name="txt_chat_status_new_message_bild">"New Image"</string>
    <string name="txt_chat_status_new_message_video">"New Video"</string>
    <string name="txt_IMAGE">"image"</string>
    <string name="txt_VIDEO">"Video"</string>
    <string name="txt_chat_status_partner_opened">"Receive"</string>
    <string name="txt_chat_SHORT_Gespeichert">"saved"</string>
    <string name="txt_chat_SHORT_Gesehen">"Seen"</string>
    <string name="txt_chat_SHORT_Hochgeladen">"uploaded"</string>
    <string name="txt_rules_accept">"I accept"</string>
    <string name="txt_register_lawandorder_DIALOG">"By pressing \"I accept,\" you agree to our Terms of Use and Privacy Policy. Disclaimer incl."</string>
    <string name="txt_welcome_dummy_login">"Welcome"</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="txt_profilbild">Profile pic</string>
    <string name="txt_profilbild_aendern">Change profile picture</string>
    <string name="txt_profilbild_entfernen">Remove profile picture</string>
    <string name="txt_loginOrRegister">Login or Register</string>
    <string name="txt_tryApp">First try only</string>
    <string name="txt_dont_wanna_share">No, I do not want to share that😞</string>
    <string name="txt_share_big_text">It\'s your turn ! Support us if you like and share your fun with your friends. We would be glad if you would recommend Spotlight to someone. :)</string>
    <string name="txt_yes_with_pleasure">Yes, sure!😎</string>
    <string name="txt_do_not_show_again">Do not show anymore</string>
</resources>