<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /* Copyright (C) Esaph, Julian Auguscik - All Rights Reserved
  ~  * Unauthorized copying of this file, via any medium is strictly prohibited
  ~  * Proprietary and confidential
  ~  * Written by Julian Auguscik <esaph.re@gmail.com>, March  2020
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/crop_image_menu_rotate_left"
        android:icon="@drawable/crop_image_menu_rotate_left"
        android:title="@string/crop_image_menu_rotate_left"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/crop_image_menu_rotate_right"
        android:icon="@drawable/crop_image_menu_rotate_right"
        android:title="@string/crop_image_menu_rotate_right"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/crop_image_menu_flip"
        android:icon="@drawable/crop_image_menu_flip"
        android:title="@string/crop_image_menu_flip"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/crop_image_menu_flip_horizontally"
                android:title="@string/crop_image_menu_flip_horizontally"/>
            <item
                android:id="@+id/crop_image_menu_flip_vertically"
                android:title="@string/crop_image_menu_flip_vertically"/>
        </menu>
    </item>
    <item
        android:id="@+id/crop_image_menu_crop"
        android:title="@string/crop_image_menu_crop"
        app:showAsAction="always"/>

</menu>