<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /* Copyright (C) Esaph, Julian Auguscik - All Rights Reserved
  ~  * Unauthorized copying of this file, via any medium is strictly prohibited
  ~  * Proprietary and confidential
  ~  * Written by Julian Auguscik <esaph.re@gmail.com>, March  2020
  ~  */
  -->

<RelativeLayout android:padding="6dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    tools:context=".PreLogin.WelcomeActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <esaph.spotlight.Esaph.EsaphGradientTextView.EsaphGradientTextView
        app:esColorArray="@array/colorGradient_Rainbow"
        android:layout_marginBottom="60dp"
        android:textStyle="bold"
        android:layout_above="@+id/activityWelcomeLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/txt_welcome_dummy_login"
        android:textColor="@color/colorBlack"
        android:textSize="50sp" />

    <LinearLayout
        android:id="@+id/activityWelcomeLinearLayout"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:stateListAnimator="@animator/bubble_button_animation"
            android:textColor="@color/colorWhite"
            android:id="@+id/textViewSkip"
            android:padding="10dp"
            android:background="@drawable/background_welcome_demo"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/txt_tryApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="#D5D5D5"
            android:layout_width="match_parent"
            android:layout_height="1dp" />


        <TextView
            android:textColor="#495357"
            android:stateListAnimator="@animator/bubble_button_animation"
            android:id="@+id/textViewLogin"
            android:padding="10dp"
            android:background="@drawable/background_welcome_im_registred"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/txt_loginOrRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>



    <LinearLayout
        android:layout_above="@+id/textView5"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:stateListAnimator="@animator/bubble_button_animation"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:id="@+id/loginImpressum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_impressum"
            android:textColor="@color/colorBlack" />

        <TextView
            android:stateListAnimator="@animator/bubble_button_animation"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:id="@+id/logInDatenSchutz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_login_datenschutzerklarung"
            android:textColor="@color/colorBlack" />

        <TextView
            android:stateListAnimator="@animator/bubble_button_animation"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:id="@+id/textViewHaftungsausschluss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_login_haftungsausschluss"
            android:textColor="@color/colorBlack" />

    </LinearLayout>


    <TextView
        android:layout_alignParentBottom="true"
        android:textAlignment="textStart"
        android:gravity="start"
        android:layout_margin="6dp"
        android:textColor="@color/colorBlack"
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_register_lawandorder" />


</RelativeLayout>