<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#2196F3"
    android:gravity="center">

        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="50sp" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

                <EditText
                    android:textStyle="bold"
                    android:id="@+id/loginUsername"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/background_login_edittext"
                    android:gravity="center"
                    android:hint="@string/txt_login_Username"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorWhite"
                    android:textCursorDrawable="@null"
                    android:textSize="17sp" />

                <ImageView
                    android:tint="@color/colorWhite"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_user"
                    android:layout_alignStart="@+id/loginUsername"
                    android:layout_alignLeft="@+id/loginUsername"
                    android:layout_alignTop="@+id/loginUsername"
                    android:layout_alignBottom="@+id/loginUsername"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:layout_below="@+id/loginUsername"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_gravity="center_horizontal"
                    android:textCursorDrawable="@null"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:gravity="center"
                    android:background="@drawable/background_login_edittext"
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/txt_login_Password"
                    android:inputType="textPassword" />

                <ImageView
                    android:tint="@color/colorWhite"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_lock"
                    android:layout_alignStart="@+id/loginPassword"
                    android:layout_alignLeft="@+id/loginPassword"
                    android:layout_alignTop="@+id/loginPassword"
                    android:layout_alignBottom="@+id/loginPassword"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content" />

        </RelativeLayout>

        <TextView
            android:stateListAnimator="@animator/bubble_button_animation"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:id="@+id/textViewLoginPasswortVergessen"
            android:text="@string/txt_login_PasswordForgotten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:padding="6dp"
            android:stateListAnimator="@animator/bubble_button_animation"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorWhite"
            android:background="@drawable/background_register_button"
            android:id="@+id/buttonLoginActivityRegister"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/txt_login_Registrieren" />

        <Button
            android:padding="6dp"
            android:textStyle="bold"
            android:stateListAnimator="@animator/bubble_button_animation"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_login_button"
            android:textColor="@color/colorWhite"
            android:id="@+id/buttonLoginActivityLogin"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/txt_login_Anmelden" />

    </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="0.5dp" />

        <TextView
            android:stateListAnimator="@animator/bubble_button_animation"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:id="@+id/loginImpressum"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_impressum" />

        <TextView
            android:stateListAnimator="@animator/bubble_button_animation"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:id="@+id/logInDatenSchutz"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_login_datenschutzerklarung" />

        <TextView
            android:stateListAnimator="@animator/bubble_button_animation"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:id="@+id/textViewHaftungsausschluss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_login_haftungsausschluss" />



</LinearLayout>
