<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /* Copyright (C) Esaph, Julian Auguscik - All Rights Reserved
  ~  * Unauthorized copying of this file, via any medium is strictly prohibited
  ~  * Proprietary and confidential
  ~  * Written by Julian Auguscik <esaph.re@gmail.com>, March  2020
  ~  */
  -->

<RelativeLayout
    android:padding="20dp"
    android:background="@drawable/background_rounded_dialog"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:gravity="start"
        android:textColor="@color/colorBlack"
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/txt_register_lawandorder_DIALOG"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:stateListAnimator="@animator/bubble_button_animation"
        android:textStyle="bold"
        android:textSize="13sp"
        android:layout_marginTop="12dp"
        android:textColor="@color/colorBlack"
        android:id="@+id/registerDatenschutz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login_datenschutzerklarung"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:stateListAnimator="@animator/bubble_button_animation"
        android:textStyle="bold"
        android:textSize="13sp"
        android:layout_marginTop="6dp"
        android:textColor="@color/colorBlack"
        android:id="@+id/registerHaftungsausschluss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerDatenschutz"
        android:layout_alignStart="@+id/registerDatenschutz"
        android:layout_below="@+id/registerDatenschutz"
        android:text="@string/txt_login_haftungsausschluss" />

    <LinearLayout
        android:padding="6dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:layout_below="@+id/registerHaftungsausschluss"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:stateListAnimator="@animator/bubble_button_animation"
            android:textSize="16sp"
            android:textAlignment="center"
            android:padding="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorBlack"
            android:background="@drawable/background_rounded_state_true"
            android:text="@string/txt_rules_accept"
            android:id="@+id/buttonDialogAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="bold"
            android:stateListAnimator="@animator/bubble_button_animation"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textAlignment="center"
            android:padding="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="#9E9E9E"
            android:background="@drawable/background_rounded_state_false"
            android:text="@string/txt_alertCountryDbDetailsCancel"
            android:id="@+id/buttonDialogCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>





</RelativeLayout>