<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_margin="25dp"
    android:padding="20dp"
    android:background="@drawable/background_rounded_dialog"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:id="@+id/textViewTitle"
        android:text="@string/txt_profilbild"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <esaph.spotlight.Esaph.EsaphCircleImageView.EsaphCircleImageView
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textViewTitle"
        android:scaleType="centerCrop"
        android:id="@+id/imageViewCurrentProfilbild"
        android:layout_width="150dp"
        android:layout_height="150dp" />


    <TextView
        android:stateListAnimator="@animator/bubble_button_animation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="6dp"
        android:background="@drawable/background_dialog_rounded_textview"
        android:id="@+id/textViewChangeProfilbild"
        android:text="@string/txt_profilbild_aendern"
        android:layout_below="@+id/imageViewCurrentProfilbild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:stateListAnimator="@animator/bubble_button_animation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="6dp"
        android:background="@drawable/background_dialog_rounded_textview"
        android:layout_below="@+id/textViewChangeProfilbild"
        android:text="@string/txt_profilbild_entfernen"
        android:id="@+id/textViewDeleteProfilbild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>